--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <!-- Content inside the travel planning box -->
                 <div class="content">
                     <h4>seamless travel planning</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fugiat deleniti magni, consequuntur necessitatibus doloremque. Ratione sunt debitis unde ullam.</p>
+                    <p>We are dedicatOur platform is designed to offer you the best travel experience by simplifying every aspect of your journey—from crafting the perfect itinerary to managing your schedule and keeping track of your expenses.</p>
                 </div>
             </div>
 
