--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <!-- Content inside the travel planning box -->
                 <div class="content">
                     <h4>seamless travel planning</h4>
-                    <p>We are dedicatOur platform is designed to offer you the best travel experience by simplifying every aspect of your journey—from crafting the perfect itinerary to managing your schedule and keeping track of your expenses.</p>
+                    <p>Our platform is designed to offer you the best travel experience by simplifying every aspect of your journey—from crafting the perfect itinerary to managing your schedule and keeping track of your expenses.</p>
                 </div>
             </div>
 
@@ -100,7 +100,7 @@
                 <!-- Content inside the tailored experiences box -->
                 <div class="content">
                     <h4>tailored experiences</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fugiat deleniti magni, consequuntur necessitatibus doloremque. Ratione sunt debitis unde ullam.</p>
+                    <p>"Craft your perfect journey with Explore With Us, where every itinerary, schedule, and expense is tailored to your unique travel style."</p>
                 </div>
             </div>
 
@@ -111,7 +111,7 @@
                 <!-- Content inside the reliability and trustworthiness box -->
                 <div class="content">
                     <h4>reliable and trustworthy</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fugiat deleniti magni, consequuntur necessitatibus doloremque. Ratione sunt debitis unde ullam.</p>
+                    <p>"Explore With Us: Your reliable and trustworthy partner for seamless itinerary planning, scheduling, and travel expense management."</p>
                 </div>
             </div>
         </div>
