--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h2 class="heading">city escape and nature retreats</h2>
                 <!-- Description of the destinations -->
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero culpa pariatur iusto sequi, ut expedita soluta nihil est quaerat itaque corporis maiores in, at id officiis tempore. Harum vitae fugit itaque expedita asperiores vero delectus?</p>
+                    <p>"Explore With Us: Discover top destinations with expertly planned itineraries, schedules, and expense management for the ultimate travel experience."</p>
                     <!-- Link to explore more destinations -->
                     <a href="#">explore more <i class="fa fa-arrow-right"></i></a>
                 </div>
@@ -194,7 +194,7 @@
                     <!-- Main heading for featured offers -->
                     <h2 class="heading">unlock exclusive travel deals</h2>
                     <!-- Description of the featured offers -->
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium esse labore,</p>
+                    <p>"Explore With Us: Unlock exclusive travel deals while planning your perfect itinerary, schedule, and expenses."</p>
                     <!-- Link to show more offers -->
                     <a href="#">show more</a>
                     <!-- Image related to the featured offer -->
