--- a/index.html
+++ b/index.html
@@ -288,58 +288,60 @@
                 </div>
             </div>
             <!-- The actual feedback text -->
-            <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat repellat iusto sunt, ducimus aliquam laboriosam placeat eligendi, dignissimos facere ratione deserunt. Voluptatum ratione saepe dolor!"</p>
+            <p>"Here’s an example of user feedback for a travel website:
+
+"I had an amazing experience using Explore With Us! The itinerary planner was easy to use, and the exclusive travel deals helped me stay within budget. My trip was smooth and well-organized—definitely my go-to site for future travels!""</p>
         </div>
         <!-- Additional feedback entries follow the same structure -->
         <div class="voice box2">
             <div class="profile">
                 <img src="photo2.jpg" alt="">
                 <div class="detail">
-                    <li>marvin davin</li>
+                    <li>Ritika Kapoor</li>
                     <li>traveler</li>
                 </div>
             </div>
-            <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat repellat iusto sunt, ducimus aliquam laboriosam placeat eligendi, dignissimos facere ratione deserunt. Voluptatum ratione saepe dolor!"</p>
+            <p>""Explore With Us made my vacation planning a breeze! The personalized itinerary and scheduling features were spot on, and I loved the real-time updates. Highly recommend it for stress-free travel planning!""</p>
         </div>
         <div class="voice box3">
             <div class="profile">
                 <img src="photo3.jpg" alt="">
                 <div class="detail">
-                    <li>marvin davin</li>
+                    <li>Saksham Gupta</li>
                     <li>traveler</li>
                 </div>
             </div>
-            <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat repellat iusto sunt, ducimus aliquam laboriosam placeat eligendi, dignissimos facere ratione deserunt. Voluptatum ratione saepe dolor!"</p>
+            <p>" "Using Explore With Us was a game changer for my trip! The seamless itinerary creation and budget management made everything so much easier. I’ll definitely use it again for my future travels.""</p>
         </div>
         <div class="voice box4">
             <div class="profile">
                 <img src="photo4.jpg" alt="">
                 <div class="detail">
-                    <li>marvin davin</li>
+                    <li>Anni Disuza</li>
                     <li>traveler</li>
                 </div>
             </div>
-            <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat repellat iusto sunt, ducimus aliquam laboriosam placeat eligendi, dignissimos facere ratione deserunt. Voluptatum ratione saepe dolor!"</p>
+            <p>""Explore With Us exceeded my expectations with its user-friendly planning tools and excellent travel deals. It made organizing my trip effortless and enjoyable. I’ll be recommending it to all my friends!""</p>
         </div>
         <div class="voice box5">
             <div class="profile">
                 <img src="photo5.jpg" alt="">
                 <div class="detail">
-                    <li>marvin davin</li>
+                    <li>Manish Jain</li>
                     <li>traveler</li>
                 </div>
             </div>
-            <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat repellat iusto sunt, ducimus aliquam laboriosam placeat eligendi, dignissimos facere ratione deserunt. Voluptatum ratione saepe dolor!"</p>
+            <p>"Explore With Us provided a flawless travel planning experience! The itinerary and expense management tools were incredibly helpful, and I appreciated the great deals offered. A top choice for any traveler!""</p>
         </div>
         <div class="voice box6">
             <div class="profile">
                 <img src="photo6.jpg" alt="">
                 <div class="detail">
-                    <li>marvin davin</li>
+                    <li>Soham</li>
                     <li>traveler</li>
                 </div>
             </div>
-            <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat repellat iusto sunt, ducimus aliquam laboriosam placeat eligendi, dignissimos facere ratione deserunt. Voluptatum ratione saepe dolor!"</p>
+            <p>""Explore With Us streamlined my travel planning process perfectly. The intuitive interface and helpful expense tracking made my trip planning stress-free. I’m thrilled with the experience and will definitely return for future trips.""</p>
         </div>
     </div>
 </section>
