--- a/index.html
+++ b/index.html
@@ -288,9 +288,7 @@
                 </div>
             </div>
             <!-- The actual feedback text -->
-            <p>"Here’s an example of user feedback for a travel website:
-
-"I had an amazing experience using Explore With Us! The itinerary planner was easy to use, and the exclusive travel deals helped me stay within budget. My trip was smooth and well-organized—definitely my go-to site for future travels!""</p>
+            <p>I had an amazing experience using Explore With Us! The itinerary planner was easy to use, and the exclusive travel deals helped me stay within budget. My trip was smooth and well-organized—definitely my go-to site for future travels</p>
         </div>
         <!-- Additional feedback entries follow the same structure -->
         <div class="voice box2">
